--- a/apps/account/templates/login.html
+++ b/apps/account/templates/login.html
@@ -1,67 +1,43 @@
+        <!-- Sing in  Form -->
+        <section class="sign-in">
+            <div class="container">
+                <div class="signin-content">
+                    <div class="signin-image">
+                        <figure><img src="images/signin-image.jpg" alt="sing up image"></figure>
+                        <a href="#" class="signup-image-link">Create an account</a>
+                    </div>
 
-
-<html>
-	<head>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-
-		<meta charset="utf-8">
-		<title> Registration </title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<!-- MATERIAL DESIGN ICONIC FONT -->
-		<link rel="stylesheet" href="{% static 'fonts_register/material-design-iconic-font/css/material-design-iconic-font.min.css' %}">
-
-		<!-- STYLE CSS -->
-		<link rel="stylesheet" href="{% static 'css_register/style.css' %}">
-	</head>
-
-	<body>
-
-		<div class="wrapper">
-			<div class="inner">
-				<form action="" method="post">
-					<h3>Registration</h3>
-<!--					{% csrf_token %}-->
-
-
-					<div class="form-wrapper">
-						{{ form.username }}
-					</div>
-					<div class="form-wrapper">
-						{{ form.email }}
-					</div>
-					<div class="form-wrapper">
-						{{ form.password1 }}
-					</div>
-
-					<button>Sign in</button>
-				</form>
-				<div class="image-holder">
-					<img src="{% static 'images_register/registration-form-5.jpg' %}" alt="">
-				</div>
-			</div>
-		</div>
-
-		<script src="{% static 'js_register/jquery-3.3.1.min.js' %}"></script>
-		<script src="{% static 'js_register/main.js' %}"></script>
-	<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-	</body>
-</html>
-
+                    <div class="signin-form">
+                        <h2 class="form-title">Sign up</h2>
+                        <form method="POST" class="register-form" id="login-form">
+                            <div class="form-group">
+                                <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="your_name" id="your_name" placeholder="Your Name"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="your_pass" id="your_pass" placeholder="Password"/>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
+                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
+                            </div>
+                            <div class="form-group form-button">
+                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                            </div>
+                        </form>
+                        <div class="social-login">
+                            <span class="social-label">Or login with</span>
+                            <ul class="socials">
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+ <!-- JS -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="js/main.js"></script>
