--- a/apps/product/templates/category_detail.html
+++ b/apps/product/templates/category_detail.html
@@ -10,7 +10,7 @@
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
           	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Products</span></p>
-            <h1 class="mb-0 bread">Products</h1>
+              <h1 class="mb-0 bread">Products in {{ category.title }}</h1>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
 				{% for product in products %}
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="product">
-    					<a href="#" class="img-prod"><img src="{{product.photo.url}}" width="200" height="200">
+    					<a href="#" class="img-prod"><img src="{{ product.photo.url }}" width="200" height="200">
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
@@ -43,19 +43,6 @@
 		    						<p class="price"><span class="mr-2 price-dc">{{product.price}}</span></p>
 		    					</div>
 	    					</div>
-	    					<div class="bottom-area d-flex px-3">
-	    						<div class="m-auto d-flex">
-	    							<a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-	    								<span><i class="ion-ios-menu"></i></span>
-	    							</a>
-	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-	    								<span><i class="ion-ios-cart"></i></span>
-	    							</a>
-	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
-	    								<span><i class="ion-ios-heart"></i></span>
-	    							</a>
-    							</div>
-    						</div>
     					</div>
     				</div>
     			</div>
