--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="">Vegefoods</a>
+	      <a class="navbar-brand" href="{% url 'index' %}">Vegefoods</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -74,21 +74,6 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-
-    <section id="home-section" class="hero">
-		  <div class="home-slider owl-carousel">
-	      <div class="slider-item" style="background-image: url({% static 'images/bg_1.jpg' %});">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-	            <div class="col-md-12 ftco-animate text-center">
-	              <h1 class="mb-2">We serve Fresh Products</h1>
-	            </div>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-    </section>
 
 	{% block content %}
 
