--- a/templates/base.html
+++ b/templates/base.html
@@ -60,9 +60,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="{% url 'index' %}" class="nav-link"><h6>Home</h6></a></li>
-	          <li class="nav-item"><a href="" class="nav-link">Category</a></li>
-              <li class="nav-item"><a href="" class="nav-link">Category</a></li>
+	          <li class="nav-item"><a href="{% url 'category' %}" class="nav-link">Category</a></li>
+              <li class="nav-item"><a href="{% url 'product' %}" class="nav-link">Product</a></li>
 	          <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
               <li class="nav-item"><a href="" class="nav-link">Register</a></li>
               <li class="nav-item"><a href="" class="nav-link">Login</a></li>
