--- a/apps/product/templates/product.html
+++ b/apps/product/templates/product.html
@@ -21,26 +21,21 @@
 				{% for product in products %}
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="product">
-    					<a href="#" class="img-prod"><img src="{{product.photo.url}}" width="200" height="200">
+    					<div class="img-prod" >
+							<img src="{{product.photo.url}}" width="300" height="300">
     						<div class="overlay"></div>
-    					</a>
+						</div>
     					<div class="text py-3 pb-4 px-3 text-center">
     						<h3><a href="#">{{product.title}}</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span class="mr-2 price-dc">{{product.price}}</span></p>
+		    						<p class="price">{{product.price}}</p>
 		    					</div>
 	    					</div>
 	    					<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-	    								<span><i class="ion-ios-menu"></i></span>
-	    							</a>
 	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
 	    								<span><i class="ion-ios-cart"></i></span>
-	    							</a>
-	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
-	    								<span><i class="ion-ios-heart"></i></span>
 	    							</a>
     							</div>
     						</div>
