--- a/apps/product/templates/category_detail.html
+++ b/apps/product/templates/category_detail.html
@@ -18,27 +18,34 @@
     				</ul>
     			</div>
     		</div>
-    		<div class="row">
+           <!-- template.html -->
+
+{% for product in products %}
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="product">
-    					<a href="#" class="img-prod"><img src="{{ product.photo.url }}" width="200" height="200">
+    					<div class="img-prod" >
+							<img src="{{product.photo.url}}" width="300" height="250">
     						<div class="overlay"></div>
-    					</a>
-						{% for product in category.product.all %}
+						</div>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">{% if product.title %}
-											{{ product.title }}
-											{% endif %}</a></h3>
+    						<h3><a href="#">{{product.title}}</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span class="mr-2 price-dc">{{product.price}}</span></p>
+		    						<p class="price">{{product.price}}</p>
 		    					</div>
 	    					</div>
+	    					<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+    							</div>
+    						</div>
     					</div>
-						{% endfor %}
     				</div>
     			</div>
-    		</div>
+				{% endfor %}
+
     		<div class="row mt-5">
           <div class="col text-center">
             <div class="block-27">
