--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="{% static 'https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap' %}" rel="stylesheet">
-    <link href="{% static 'https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap' %}" rel="stylesheet">
-    <link href="{% static 'https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="{% static 'css/open-iconic-bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
@@ -53,7 +53,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="{% url 'index' %}">Vegefoods</a>
+	      <a class="navbar-brand" href="{% url 'category' %}">Vegefoods</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -117,9 +117,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Kyrgystan, Bishkek, Ahunbaeva 133/1                 </span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+996 703 060 202</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">Dlangoinfo@gmail.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Kyrgyztan, Bishkek, Ahunbaeva 133/1 </span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -147,8 +147,7 @@
   <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
   <script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
   <script src="{% static 'js/scrollax.min.js' %}"></script>
-  <script src="{% static 'https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false' %}"></script>
-  <script src="{% static 'js/google-map.js' %}"></script>
+<!--  <script src="{% static 'js/google-map.js' %}"></script>-->
   <script src="{% static 'js/main.js' %}"></script>
 
   </body>
