--- a/apps/product/templates/product.html
+++ b/apps/product/templates/product.html
@@ -3,6 +3,13 @@
 {% load static %}
 
 {% block content %}
+
+{% if no_results %}
+       <div style="font-size: 25px;">
+        <p>Ничего не найдено для запроса "{{ q }}".</p>
+        <p>Попробуйте ввести другой запрос. Например, {{ suggestions|join:", " }}.</p>
+    </div>
+{% else %}
 <html lang="en">
   <body class="goto-here">
     <div class="hero-wrap hero-bread" style="background-image: url({% static 'images/bg_1.jpg' %});">
@@ -14,7 +21,6 @@
         </div>
       </div>
     </div>
-
     <section class="ftco-section">
     	<div class="container">
     		<div class="row">
@@ -61,6 +67,11 @@
         </div>
     	</div>
     </section>
+    {% for product in products %}
+        {{ product.title }}
+    {% endfor %}
+{% endif %}
+
   </body>
 </html>
 {% endblock %}
