--- a/apps/product/templates/category.html
+++ b/apps/product/templates/category.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% block title %} Category List {% endblock %}
 {% block content %}
 	<section id="home-section" class="hero">
 		  <div class="home-slider owl-carousel">
