--- a/apps/product/templates/category_detail.html
+++ b/apps/product/templates/category_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% block title %} Category detail {% endblock %}
 {% block content %}
 <html lang="en">
   <body class="goto-here">
