--- a/apps/product/templates/product.html
+++ b/apps/product/templates/product.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% block title %} Product List {% endblock %}
 {% block content %}
 
 {% if no_results %}
