--- a/templates/base.html
+++ b/templates/base.html
@@ -3,40 +3,12 @@
 {% load static %}
 {% load custom_filters %}
   <head>
-      <style type="text/css">
-/* Обводка инпута */
-input[type="search"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: black;
-}
-input[type="search"] {
-    border: 2px solid #333;  /* Толщина и цвет обводки */
-    padding: 8px;  /* Внутренний отступ для улучшения визуального восприятия */
-    margin: 5px;  /* Внешний отступ для управления расположением инпута */
-}
 
-/* Цвет кнопки */
-.btn-outline-success {
-    color: #28a745;  /* Цвет текста кнопки */
-    background-color: #fff;  /* Цвет фона кнопки */
-    border-color: #28a745;  /* Цвет обводки кнопки */
-    padding: 10px;  /* Внутренний отступ для улучшения визуального восприятия */
-    margin: 5px;  /* Внешний отступ для управления расположением кнопки */
-}
-
-/* Эффект при наведении на кнопку */
-.btn-outline-success:hover {
-    color: #fff;  /* Цвет текста при наведении */
-    background-color: #28a745;  /* Цвет фона при наведении */
-    border-color: #28a745;  /* Цвет обводки при наведении */
-}
-    </style>
-    <title>Vegefoods - Free Bootstrap 4 Template by Colorlib</title>
+    <title>{% block title %} {% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+      <link rel="icon" type="image/png" href="{% static 'images/icons8-fruit-watermeleon.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
@@ -101,17 +73,23 @@ input[type="search"] {
                 <li> <form action="{% url 'search' %}"></form></li>
                 {% else %}
               <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Logout</a></li>
-                 <li class="nav-item">
-            <form  method="get" action="{% url 'search' %}">
-                <input class="nav-link" type="search" placeholder="Search" aria-label="Search" name="q">
-                <button  type="submit">Search</button>
-            </form>
-        </li>
                 {% endif %}
+                </ul>
+                <form action="{% url 'search' %}" method="get">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="button-addon2" name="q" style="border-color: gray;">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="submit" style="color: #fff; background-color: #81B62f; border-color: gray;" onmouseover="this.style.backgroundColor='#72B62f'; this.style.color='#fff'" onmouseout="this.style.backgroundColor='#81B62f'; this.style.color='#fff'">Search</button>
+                        </div>
+                    </div>
+                </form>
+
+
+                <ul class="navbar-nav ml-auto">
 	          <li class="nav-item cta cta-colored"><a href="{% url 'cart' %}"
                        class="nav-link"><span class="icon-shopping_cart"></span>[{{ carts|total_items }}]</a></li>
+                </ul>
 
-	        </ul>
 	      </div>
 	    </div>
 	  </nav>
